<resources>
    <string name="app_name">LoadMoreWrapper</string>

    <string-array name="tab_main">
        <item>Default</item>
        <item>Item not covered</item>
        <item>GridLayoutManager</item>
        <item>StaggeredGridLayoutManager</item>
    </string-array>

    <string name="default_usage">default_usage</string>
    <string name="another_usage">another_usage</string>
    <string name="issues">Issues</string>
    <string name="not_show_footer_when_not_covered_screen">Not Show Footer When Not Covered Screen</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="flex_box_layout_manager">FlexboxLayoutManager</string>
</resources>
