<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.github.nukc.sample.MainActivity">

    <Button
        android:id="@+id/btn_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_usage"
        app:textAllCaps="false" />

    <Button
        android:id="@+id/btn_another"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/another_usage"
        app:textAllCaps="false" />

    <Button
        android:id="@+id/btn_issues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/issues"
        app:textAllCaps="false" />

    <Button
        android:id="@+id/btn_not_show_footer_when_not_covered_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/not_show_footer_when_not_covered_screen"
        app:textAllCaps="false" />

    <Button
        android:id="@+id/btn_flex_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/flex_box_layout_manager"
        app:textAllCaps="false" />

</LinearLayout>
